--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "userInterfaceStyle": "light",
     "splash": {
       "image": "./assets/react_quiz_app_template.jpeg",
-      "resizeMode": "contain",
+      "resizeMode": "cover",
       "backgroundColor": "rgb(7,7,20)"
     },
     "assetBundlePatterns": [
