--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "RNQuizApp",
-    "slug": "RNQuizApp",
+    "name": "RNQuiz",
+    "slug": "RNQuiz",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
