--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/react_quiz_app_template.jpeg",
+      "image": "./assets/react_quiz_app_template.png",
       "resizeMode": "cover",
-      "backgroundColor": "rgb(7,7,20)"
+      "backgroundColor": "#070614"
     },
     "assetBundlePatterns": [
       "**/*"
@@ -21,10 +21,17 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.julietdiana.RNQuiz"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "5cfe1339-6f5d-49ab-ae5a-c59d497a9780"
+      }
+    },
+    "owner": "julietdiana"
   }
 }
