--- a/package.json
+++ b/package.json
@@ -6,15 +6,35 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/native-stack": "^6.9.22",
     "expo": "^51.0.8",
-    "expo-status-bar": "~1.11.1",
+    "expo-status-bar": "^1.12.1",
+    "jest": "^29.7.0",
     "react": "18.2.0",
-    "react-native": "0.73.4"
+    "react-native": "^0.74.1",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
+    "jest-expo": "~51.0.1"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "collectCoverage": true,
+  "collectCoverageFrom": [
+    "**/*.{js,jsx}",
+    "!**/coverage/**",
+    "!**/node_modules/**",
+    "!**/.expo/**",
+    "!**/babel.config.js",
+    "!**/jest.setup.js"
+  ]
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
